--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,9 +1,9 @@
 .container {
-  padding: 0 2rem;
+  padding: 0;
 }
 
 .main {
-  min-height: 100vh;
+  min-height: 90vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -21,24 +21,6 @@
   align-items: center;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
   line-height: 1.15;
@@ -54,6 +36,7 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+  // font-family: "Cascadia Code";
 }
 
 .code {
@@ -109,6 +92,12 @@
 }
 
 @media (max-width: 600px) {
+  .container {
+    padding: 0 30px;
+  }
+  .title {
+    font-size: 2rem;
+  }
   .grid {
     width: 100%;
     flex-direction: column;
